Closed Bug 1518495 Opened 7 years ago Closed 7 years ago

Perma Android 8.0 Pixel2 opt exception output: /data/local/tests/jit-tests/jit-tests/tests/auto-regress/bug710192.js:10:1 Error: Assertion failed: got (void 0), expected "1234"

Categories

(Core :: JavaScript Engine, defect, P5)

defect

Tracking

()

RESOLVED FIXED
mozilla66
Tracking Status
firefox66 --- fixed

People

(Reporter: intermittent-bug-filer, Assigned: anba)

References

Details

Attachments

(1 file)

Filed by: ebalazs [at] mozilla.com

https://treeherder.mozilla.org/logviewer.html#?job_id=220576455&repo=mozilla-inbound

https://queue.taskcluster.net/v1/task/CA5dfzcQT82b65jJCsDRYQ/runs/0/artifacts/public/logs/live_backing.log

TEST-PASS | tests/jit-test/jit-test/tests/auto-regress/bug704136.js | Success (code 3, args "--no-baseline --no-ion") [0.2 s]
12:57:06 INFO - {"action": "test_start", "jitflags": "--no-baseline --no-ion", "pid": 432, "source": "jittests", "test": "auto-regress/bug704136.js", "thread": "main", "time": 1546952226.660388}
12:57:06 INFO - {"action": "test_end", "extra": {"jitflags": "--no-baseline --no-ion"}, "jitflags": "--no-baseline --no-ion", "message": "Success", "pid": 432, "source": "jittests", "status": "PASS", "test": "auto-regress/bug704136.js", "thread": "main", "time": 1546952226.864166}
12:57:07 INFO - exception output: /data/local/tests/jit-tests/jit-tests/tests/auto-regress/bug710192.js:10:1 Error: Assertion failed: got (void 0), expected "1234"
12:57:07 INFO - Stack:
12:57:07 INFO - @/data/local/tests/jit-tests/jit-tests/tests/auto-regress/bug710192.js:10:1
12:57:07 INFO - TEST-PASS | tests/jit-test/jit-test/tests/auto-regress/bug710192.js | Success (code 3, args "") [0.2 s]
12:57:07 INFO - {"action": "test_start", "jitflags": "", "pid": 432, "source": "jittests", "test": "auto-regress/bug710192.js", "thread": "main", "time": 1546952226.864919}
12:57:07 INFO - {"action": "test_end", "extra": {"jitflags": ""}, "jitflags": "", "message": "Success", "pid": 432, "source": "jittests", "status": "PASS", "test": "auto-regress/bug710192.js", "thread": "main", "time": 1546952227.068012}
12:57:07 INFO - exception output: /data/local/tests/jit-tests/jit-tests/tests/auto-regress/bug710192.js:10:1 Error: Assertion failed: got (void 0), expected "1234"
12:57:07 INFO - Stack:
12:57:07 INFO - @/data/local/tests/jit-tests/jit-tests/tests/auto-regress/bug710192.js:10:1
12:57:07 INFO - TEST-PASS | tests/jit-test/jit-test/tests/auto-regress/bug710192.js | Success (code 3, args "--ion-eager --ion-offthread-compile=off") [0.2 s]
12:57:07 INFO - {"action": "test_start", "jitflags": "--ion-eager --ion-offthread-compile=off", "pid": 432, "source": "jittests", "test": "auto-regress/bug710192.js", "thread": "main", "time": 1546952227.0686638}
12:57:07 INFO - {"action": "test_end", "extra": {"jitflags": "--ion-eager --ion-offthread-compile=off"}, "jitflags": "--ion-eager --ion-offthread-compile=off", "message": "Success", "pid": 432, "source": "jittests", "status": "PASS", "test": "auto-regress/bug710192.js", "thread": "main", "time": 1546952227.271818}
12:57:07 INFO - exception output: /data/local/tests/jit-tests/jit-tests/tests/auto-regress/bug710192.js:10:1 Error: Assertion failed: got (void 0), expected "1234"
12:57:07 INFO - Stack:
12:57:07 INFO - @/data/local/tests/jit-tests/jit-tests/tests/auto-regress/bug710192.js:10:1
12:57:07 INFO - TEST-PASS | tests/jit-test/jit-test/tests/auto-regress/bug710192.js | Success (code 3, args "--ion-eager --ion-offthread-compile=off --ion-check-range-analysis --ion-extra-checks --no-sse3 --no-threads") [0.2 s]
12:57:07 INFO - {"action": "test_start", "jitflags": "--ion-eager --ion-offthread-compile=off --ion-check-range-analysis --ion-extra-checks --no-sse3 --no-threads", "pid": 432, "source": "jittests", "test": "auto-regress/bug710192.js", "thread": "main", "time": 1546952227.2724779}
12:57:07 INFO - {"action": "test_end", "extra": {"jitflags": "--ion-eager --ion-offthread-compile=off --ion-check-range-analysis --ion-extra-checks --no-sse3 --no-threads"}, "jitflags": "--ion-eager --ion-offthread-compile=off --ion-check-range-analysis --ion-extra-checks --no-sse3 --no-threads", "message": "Success", "pid": 432, "source": "jittests", "status": "PASS", "test": "auto-regress/bug710192.js", "thread": "main", "time": 1546952227.475525}
12:57:07 INFO - exception output: /data/local/tests/jit-tests/jit-tests/tests/auto-regress/bug710192.js:10:1 Error: Assertion failed: got (void 0), expected "1234"

anba: Hi, This failure started after https://bugzilla.mozilla.org/show_bug.cgi?id=1517823 landed. Can you have a look? Thank you.

Blocks: 1517823
Flags: needinfo?(andrebargull)
Attached patch bug1518495.patchSplinter Review

Ugh, arena_id_t is just a typedef for size_t, so we didn't get a compiler warning/error when I messed up the arena_id_t arena and size_t nbytes parameter order in JSContext::onOutOfMemory.

And also quite interesting this only blew up Android 8...

Assignee: nobody → andrebargull
Status: NEW → ASSIGNED
Flags: needinfo?(andrebargull)
Attachment #9035056 - Flags: review?(sphink)
Attachment #9035056 - Flags: review?(sphink) → review+

anba: sfink: can we land this? Thanks!

Flags: needinfo?(sphink)
Flags: needinfo?(andrebargull)

(In reply to Eliza Balazs [:ebalazs_] from comment #5)

anba: sfink: can we land this? Thanks!

Yes, setting "checkin-needed".

Try: https://treeherder.mozilla.org/#/jobs?repo=try&revision=dba5526f6308eccbc405a1438dd6c0bc2b693362

Flags: needinfo?(andrebargull)
Keywords: checkin-needed

Pushed by ebalazs@mozilla.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/a4b8887afbc9
Correct parameter order for JSContext::onOutOfMemory. r=sfink

Keywords: checkin-needed
Status: ASSIGNED → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla66
Flags: needinfo?(sphink)
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: