Bug 1518495: Correct parameter order for JSContext::onOutOfMemory. r=sfink